mattapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: 192.168.1.100
spec:
  ports:
  - name: mattapp
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: 192.168.1.100
subsets:
- addresses:
  - ip: 192.168.1.100
  ports:
  - name: mattapp
    port: 80
    protocol: TCP
