ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: learnscianalytics
  namespace: default
spec:
  rules:
  - host: learnscianalytics.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: learnscianalytics
            port:
              number: 443
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - learnscianalytics.com
    secretName: learnscianalytics-cert # < cert-manager will store the created certificate in this secret.
